[package]
name = "ccx_runner"
authors = ["Quentin Huss"]
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
dirs = "5.0.1"
eframe = "0.28.1"
egui = "0.28.1"
egui-theme-switch = "0.5.0"
egui_extras = "0.28.1"
egui_plot = "0.28.1"
rfd = "0.14.1"
serde = "1.0.228"
serde_json = "1.0.145"